# streamlit-diff-viewer

./: README.md  build.sh  example.py  pyproject.toml
st-diff-viewer/: __init__.py
st-diff-viewer/frontend/: next.config.js
st_diff_viewer/: __init__.py
st_diff_viewer/frontend/: package.json
st_diff_viewer/frontend/components/: streamlit-diff-viewer.tsx
streamlit_diff_viewer/: __init__.py
streamlit_diff_viewer/frontend/: next.config.js  package.json
