[tool.poetry]
name = "streamlit-diff-viewer"
version = "0.3.8"
description = "A Streamlit component to display diff betoween two strings"
authors = ["Xueyuan Lin <linxy59@mail2.sysu.eud.cn>"]
readme = "README.md"
packages = [{ include = "streamlit_diff_viewer"}]

license = "MIT"

# Only include the out directory of the frontend
# The order of the include/exclude lists is important!
include = ["streamlit_diff_viewer/frontend/out/**"]
exclude = ["streamlit_diff_viewer/frontend/*"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = ">=0.63"

[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

