[tool.poetry]
name = "st-diff-viewer"
version = "1.0.0"
description = "A Streamlit component to display diff betoween two strings"
authors = ["Xueyuan Lin <linxy59@mail2.sysu.eud.cn>"]
readme = "README.md"
packages = [{ include = "st-diff-viewer"}]

license = "MIT"

# Only include the out directory of the frontend
# The order of the include/exclude lists is important!
include = ["st-diff-viewer/frontend/out/**"]
exclude = ["st-diff-viewer/frontend/*"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = ">=0.63"

[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

